<resources>
    <string name="app_name">Pronostigram</string>

    <string name="welcome_string_IT">Benvenuto in\nPronostigram!</string>
    <string name="login_string_IT">Accedi a\nPronostigram!</string>
    <string name="button_entra_string_IT">ENTRA</string>
    <string name="button_registrati_string_IT">REGISTRATI</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Accedi</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_IT">ACCEDI</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_confirm_email">Le due email devono corrispondere</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Le due password devono corrispondere</string>

    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to registration -->
    <string name="button_confirm_string_IT">CONFERMA</string>
    <string name="registrazione_string_IT">Inserisci i tuoi dati!</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_cognome">Cognome</string>
    <string name="prompt_email_reg">Email</string>
    <string name="prompt_email_reg_confirm">Conferma Email</string>
    <string name="prompt_password_reg">Password</string>
    <string name="prompt_password_reg_confirm">Conferma Password</string>

    <string name="title_activity_feed">FeedActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error_weak_password">Password troppo semplice</string>
    <string name="error_user_exists">Email esistente</string>

    <!-- Strings related to searchview -->
    <string name="searchable_hint">Cerca</string>
    <string name="searchable_label">searchable</string>

    <!-- Strings related to FeedActivity -->
    <string name="title_feed_activity">Daily Feeds</string>
    <string name="title_activity_settings">Settings</string>
    <string name="string_match">SquadraCasa - SquadraOspite</string>
    <string name="string_data_match">11/11/2011  15:45</string>
    <string name="string_esito">1X</string>
    <string name="string_num_followers">355</string>

    <!-- Strings related to ProfileActivity -->
    <string name="title_profile_activity">Profilo</string>
    <string name="email_profile_activity">Email</string>
    <string name="nome_profile_activity">Nome</string>
    <string name="cognome_profile_activity">Cognome</string>
    <string name="pron_tot_profile_activity">Pronostici condivisi</string>
    <string name="pron_vinti_profile_activity">Pronostici Vinti</string>



    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="matchId">MatchID</string>


</resources>
