<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light_transparent"
    android:orientation="horizontal"
    android:weightSum="100">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="55"
        android:weightSum="100"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/textview_match"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:text="@string/string_match"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/textview_data_match"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:text="@string/string_data_match"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:textSize="10dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textview_esito"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/string_esito"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/button_follow"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:background="@android:drawable/screen_background_light_transparent"
        android:src="@mipmap/icon_ball"
        android:layout_gravity="center_vertical"
        android:scaleY="0.8"
        android:scaleX="0.8"/>

    <TextView
        android:id="@+id/textview_followers"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="20"
        android:gravity="left|center_vertical"
        android:text="@string/string_num_followers"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        android:textStyle="bold" />

</LinearLayout>
