<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="it.fmgroup.pronostigram.InitialFragment">

    <TextView
        android:id="@+id/textview_welcome"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:layout_weight="20"
        android:gravity="center_vertical"
        android:text="@string/welcome_string_IT"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:layout_marginTop="16dp"
        app:srcCompat="@mipmap/logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100">

        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10" />

        <Button
            android:id="@+id/button_entra"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="80"
            android:text="@string/button_entra_string_IT"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100">

        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10" />

        <Button
            android:id="@+id/button_registrati"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="80"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_registrati_string_IT"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15" />

</LinearLayout>
