<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_feed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.fmgroup.pronostigram.FeedActivity"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:weightSum="80"
        android:background="@drawable/border"> >


        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@android:color/transparent"
            android:src="@mipmap/icon_back"
            android:scaleX="1"
            android:scaleY="1"/>

        <TextView
            android:id="@+id/textview_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/title_profile_activity"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@android:color/transparent"
            android:src="@mipmap/icon_settings"
            android:scaleX="1"
            android:scaleY="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:weightSum="100"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100">

            <TextView
                android:id="@+id/textview_title_nome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:gravity="start|center_vertical"
                android:text="@string/nome_profile_activity"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_nome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="end|center_vertical"
                android:text="inserire nome"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100">

            <TextView
                android:id="@+id/textview_title_cognome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:gravity="start|center_vertical"
                android:text="@string/cognome_profile_activity"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_cognome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="end|center_vertical"
                android:text="inserire cognome"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100">

            <TextView
                android:id="@+id/textview_title_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/email_profile_activity"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="end|center_vertical"
                android:text="inserire email"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100">

            <TextView
                android:id="@+id/textview_title_pron_tot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/pron_tot_profile_activity"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_pron_tot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:text="inserire Pron tot"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100">

            <TextView
                android:id="@+id/textview_title_pron_vinti"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/pron_vinti_profile_activity"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_pron_vinti"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:text="inserire Pron vinti"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>



</LinearLayout>
